$Id$

NOTE: This is the 1.3.X development branch.
Put code changes right below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - 27-Dec-09 bb In includes/init.php, moving some of the CSS links into print_header($INC)
   and some other cleanup.
 - 26-Dec-09 bb Removing PHP from JavaScript and vice versa 
   and some cleanup for consistancy - register.php
 - 27-Nov-09 bb Fix bug [ 2903004 ] Warning message after successfully login
 - 22-Nov-09 bb Since js/popups.php is all javascript, I'm changing the name to popups.js
 - 22-Nov-09 bb I seem to have broken the PHPDocumentor functionality some months ago.
   Glad it's not used very often. Let's see if I can fix it.
   Also, some cleanup. Should I make one massive update or several thousand small ones?
 - 22-Nov-09 bb Delete translations no longer in use.
   Correct code for translation that was not being picked up by update_translaton.pl.
 - 01-Nov-09 bb Extract CSS and JavaScript from access.php
 - 01-Nov-09 bb Start moving CSS files to their own subdirectory. 
 - 30-Oct-09 bb I had changed things to v1.2.0 because that's what most files showed.
   But, I think we're really working on v1.3.0 in HEAD.
 - 30-Oct-09 bb Back out Patch [ 1425442 ] case-insensitive user names
   Incomplete. Pre-existing usernames with Uppercase are not retrieved correctly.
 - 21-Oct-09 bb Updating includes/config.php and the SQL files to V1.2.0
 - 19-Oct-09 bb Patch [ 2880387 ] Viewing other user's calendar when user access cntrl is off
 - 19-Oct-09 bb Extracting CSS & Javascript from about.php to external files.
   New script file js/v_h_scrolls.js allows multiple scrollers per page.
 - 15-Oct-09 bb Remove excess styles
 - 14-Oct-09 bb Patch [ 1753426 ] layerentrys aren't marked as entrys (no hasevent class)
 - 14-Oct-09 bb Patch [ 1425442 ] case-insensitive user names
 - 12-Oct-09 bb Patch [ 2877076 ] Fix some off by one dates due to daylight saving